2005-07-08  Derek Price  <derek@ximbiot.com>

	* images/*.gif: Convert all these files to...
	* images/*.png: PNG format.
	* COPYING: Paste in full text of Creative Commons License.

2005-07-07  Derek Price  <derek@ximbiot.com>

	* COPYING, T2h_i18n.pm, check_texinfo.pl.in, manage_i18n.pl.in,
	texi2html.pl, missing-texi2html, doc/texi2html.texi: Update FSF address
	in Copyright notice and Copyright years.
	* INSTALL, install-sh, mdate-sh, missing, mkinstalldirs, doc/mdate-sh,
	doc/texinfo.tex: Update from Automake 1.9.5.
	* Makefile.in, aclocal.m4, doc/Makefile.in: Regenerated with
	Automake 1.9.5.

2005-05-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: use Cwd in package Texi2HTML::LaTeX2HTML;

2005-03-29  Patrice Dumas  <dumas@centre-cired.fr>

	* examples/chm.init: Protect attributes on generated HHC and HHK.
	patch from jrfonseca (Jose Fonseca). Issue #12.
	* texi2html.pl: @CONF_DIRS is global.

2005-03-21  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init,texi2html.pl: new option --conf-dir to specify
	directory for config and init files.

2005-03-09  Derek Price  <derek@ximbiot.com>

	* texi2html: Use the Cwd module for cross-platform portability.
	(Thanks to a report from Vincent LaBella <VLaBella@uamail.albany.edu>.)

2005-03-07  Derek Price  <derek@ximbiot.com>

	* texi2html.pl:  Comment end of Texi2HTML::Config package.

2005-02-27  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init,texi2html.pl: handle @frenchspacing.
	* Tests/formatting/comments.texi: test for @frenchspacing.

2005-02-13  Patrice Dumas  <dumas@centre-cired.fr>

	* README,doc/texi2html.texi: update.
	* buildt2h.sh: add this script, a simple wrapper around the sed 
	one-liner that builds the texi2html script. The arguments are the 
	files concatenated, determined by make.
	* Makefile.am: handle buildt2h.sh.

2005-02-13  Patrice Dumas  <dumas@centre-cired.fr>

	* INTRODUCTION: remove and merge content in...