@@ -3,7 +3,8 @@
 #
 # check_texinfo.pl: Extract texinfo commands from files
 #
-#    Copyright (C) 2003  Free Software Foundation, Inc.
+#    Copyright (C) 2003, 2005  Patrice Dumas <dumas@centre-cired.fr>
+#                            & Derek Price <derek@ximbiot.com>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -17,7 +18,8 @@
 #
 #    You should have received a copy of the GNU General Public License
 #    along with this program; if not, write to the Free Software
-#    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+#    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+#    02110-1301  USA
 #
 #-##############################################################################
 
