@@ -1,9 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html401/loose.dtd">
 <html>
-<!--Copyright C 1999, 2000, 2001, 2002, 2003, 2004, 2005
-                       Free Software Foundation, Inc.
-
- Portions of texi2html
+<!-- Portions of texi2html
   Copyright C 1999, 2000 Lionel Cons
   Copyright C 1999, 2000 Karl Berry
   Copyright C 1999, 2000 Olaf Bachmann
@@ -34,7 +31,7 @@ conditions for modified versions, except that this
 permission notice may be stated in a translation approved
 by the Free Software Foundation.
 -->
-<!-- Created on July, 8 2005 by texi2html @PACKAGE_VERSION@ -->
+<!-- Created on July, 12 2005 by texi2html @PACKAGE_VERSION@ -->
 <!--
 Written by: Lionel Cons <Lionel.Cons@cern.ch> (original author)
             Karl Berry  <karl@freefriends.org>
@@ -81,9 +78,6 @@ ul.toc {list-style: none}
 <td valign="middle" align="left">[<a href="#SEC_About" title="About (help)"> ? </a>]</td>
 </tr></table>
 <h1 class="settitle">Texi2HTML</h1>
-<p>Copyright &copy; 1999, 2000, 2001, 2002, 2003, 2004, 2005
-                       Free Software Foundation, Inc.
-</p>
 <table>
 <tr><td><p> Portions of <code>texi2html</code>
 </p></td></tr>
@@ -136,7 +130,7 @@ by the Free Software Foundation.
 <a name="SEC_Top"></a>
 
 
-<p>This manual, last updated 7 July 2005, describes version 1.77
+<p>This manual, last updated 12 July 2005, describes version 1.77
 of the <code>texi2html</code> Perl script which converts
 <a href="http://www.texinfo.org">Texinfo</a> into <a href="http://w3c.org">HTML</a>.
 </p>
@@ -6199,7 +6193,7 @@ is added to <tt>`Makefile.am'</tt>.
 </tr></table>
 <h1>About This Document</h1>
 <p>
-  This document was generated by <em>Derek R. Price</em> on <em>July, 8 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html @PACKAGE_VERSION@</em></a>.
+  This document was generated by <em>Derek R. Price</em> on <em>July, 12 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html @PACKAGE_VERSION@</em></a>.
 </p>
 <p>
   The buttons in the navigation panels have the following meaning:
@@ -6301,7 +6295,7 @@ is added to <tt>`Makefile.am'</tt>.
 <hr size="1">
 <p>
  <font size="-1">
-  This document was generated by <em>Derek R. Price</em> on <em>July, 8 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html @PACKAGE_VERSION@</em></a>.
+  This document was generated by <em>Derek R. Price</em> on <em>July, 12 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html @PACKAGE_VERSION@</em></a>.
  </font>
  <br>
 
