@@ -1,4 +1,4 @@
-@set UPDATED 7 July 2005
+@set UPDATED 12 July 2005
 @set UPDATED-MONTH July 2005
 @set EDITION 1.77
 @set VERSION 1.77
