@@ -1,6 +1,7 @@
 #! /bin/sh
 # Common stub for a few missing GNU programs while installing.
 # Copyright 1996, 1997, 1999, 2000, 2005 Free Software Foundation, Inc.
+# Copyright (C) 2005 Derek Price <derek@ximbiot.com>,
 # Originally by Fran,cois Pinard <pinard@iro.umontreal.ca>, 1996.
 
 # This program is free software; you can redistribute it and/or modify
